--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "xg-csshint",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "csshint",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jasmine JASMINE_CONFIG_PATH=jasmine.json"
   },
   "keywords": [
     "postcss-plugin",
     "csshint",
-    "xg"
+    "xg",
+    "postcss-runner"
   ],
   "bin": {
     "xg-csshint": "./bin/xg-csshint"
