--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-watch": "^0.6.1"
   },
   "dependencies": {
     "chalk": "^1.1.1",
